# pagrs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/pagrs/: Cargo.toml
src/pagrs-bmp/: Cargo.toml  README.md
src/pagrs-bmp/src/: lib.rs
src/pagrs-core/: Cargo.toml  README.md
src/pagrs-core/src/: lib.rs  page_wrapper.rs  rotation.rs  splash_screen.rs
src/pagrs-demo-ssd1306/: Cargo.toml  README.md  build.rs
src/pagrs-demo-ssd1306/src/: main.rs
src/pagrs-matrix/: Cargo.toml  README.md
src/pagrs-matrix/src/: lib.rs
src/pagrs-screensaver/: Cargo.toml  README.md
src/pagrs-screensaver/src/: lib.rs
src/pagrs-text/: Cargo.toml  README.md
src/pagrs-text/src/: dynamic_text.rs  lib.rs  static_text.rs
src/pagrs/src/: lib.rs
