[workspace]
members = [
    "src/pagrs-demo-ssd1306",
    "src/pagrs-core",
    "src/pagrs-text",
    "src/pagrs-bmp",
    "src/pagrs-screensaver",
    "src/pagrs-matrix", "src/pagrs",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Gregor :kelko: Karzelek <kelko@me.com>"]
description = "pagrs: Page Rotation on Embedded Displays"
edition = "2021"
license = "MIT"

[workspace.dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "defmt", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-graphics-core = { version = "0.4.0" }
embedded-graphics = { version = "0.8.1" }
display-interface = { version = "0.5.0" }
embedded-layout = { version = "0.4.1" }
heapless = { version = "0.8" }
tinybmp = { version = "0.6.0" }

ssd1306 = { version = "0.9.0", features = ["async", "embedded-graphics-core"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
