[package]
name = "pagrs-bmp"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pagrs-core = { path = "../pagrs-core" }
display-interface =  {workspace = true }
embedded-graphics-core =  {workspace = true }
embedded-graphics =  {workspace = true }
embedded-layout = {workspace = true}
tinybmp = {workspace = true}