[package]
name = "pagrs-demo-ssd1306"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pagrs = {path = "../pagrs", features = ["screensaver", "matrix"]}
embassy-executor = { workspace = true }
embassy-time = {workspace = true }
embedded-graphics =  {workspace = true }
heapless = {workspace = true, features = ["ufmt"]}
ufmt = "0.2.0"

ssd1306 =  {workspace = true, features = ["async", "embedded-graphics-core"] }
embassy-rp = { version = "0.2.0", features = ["unstable-pac", "time-driver", "defmt", "critical-section-impl"] }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
