[package]
name = "pagrs-demo-ssd1306"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
pagrs = {path = "../pagrs", features = ["screensaver", "matrix"]}
embassy-executor = { workspace = true }
embassy-time = {workspace = true }
embedded-graphics =  {workspace = true }
heapless = {workspace = true, features = ["ufmt"]}
ufmt = "0.2.0"

ssd1306 =  {workspace = true, features = ["async", "embedded-graphics-core"] }
embassy-rp = { version = "0.3.1", features = ["unstable-pac", "time-driver", "defmt", "critical-section-impl", "rp2040"] }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7.5"
rand = { version = "0.9.0", features = ["small_rng"], default-features = false }