[package]
name = "pagrs-matrix"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pagrs-core = { path = "../pagrs-core" }
display-interface =  {workspace = true }
embedded-graphics-core =  {workspace = true }

critical-section = "1.2.0"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
static_cell = { version = "2.1.0" }
rand = { version = "0.9.0", features = ["small_rng"], default-features = false }
