[package]
name = "pagrs"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pagrs-core = {path = "../pagrs-core" }
pagrs-bmp = {path = "../pagrs-bmp", optional = true }
pagrs-screensaver = {path = "../pagrs-screensaver", optional = true }
pagrs-text = {path = "../pagrs-text", optional = true }
pagrs-matrix = {path = "../pagrs-matrix", optional = true }

[features]
bmp = ["pagrs-bmp"]
text = ["pagrs-text"]
matrix = ["pagrs-matrix"]
screensaver = ["pagrs-screensaver"]
default = ["bmp", "text"]
